test/Fail/OpaqueUnfoldType.err
OpaqueUnfoldType.agda:52.50-51: error: [UnequalTerms]
n != (zero + n) of type Nat
when checking that the expression x has type Vec A (zero + n)
